# RPNcalc

./: CMakeLists.txt  INSTALL  Makefile  README  handlers.f90  process_help.pl  rpncalc.desktop  rpncalc.f90  rpncalc.txt  tmp.txt  utils.f90  widgets.f90
cmake/: FindGtk2Fortran.cmake  FindGtk3Fortran.cmake
docs/: CMakeLists.txt  Makefile  README  RPNcalc.1  RPNcalc.rc  RPNcalc.tex  RPNcalc.txt  rpncalc.1  rpncalc.tex  rpncalc.txt
src/: CMakeLists.txt  Makefile  RPNcalc.desktop  handlers-tmpl.f90  handlers.f90  physics.f90  rpncalc.f90  rpncalc.txt  utils.f90  widgets.f90
